# seleniumPytest

./: .gitignore  conftest.py  pyproject.toml  pytest.ini  report.html
pages/: base_page.py  form_page.py  listing_page.py
tests/: test_crud.py  test_crud_pom.py  test_example.py
utility/: random_utility.py
